{
  "version": 4,
  "terraform_version": "1.0.7",
  "serial": 20,
  "lineage": "ce76ad27-0722-657e-4e61-a5f596a9c5b1",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "udacity",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "udacity",
            "metadata": [
              {
                "generation": 0,
                "name": "udacity",
                "resource_version": "1116",
                "uid": "8d50b160-deba-404c-9e00-ab2aab4f5588"
              }
            ],
            "wait_for_default_service_account": false
          },
          "dependencies": [
            "data.aws_caller_identity.current",
            "module.project_eks.aws_eks_cluster.cluster",
            "module.project_eks.aws_iam_role.eks_node_cluster_role",
            "module.vpc.aws_subnet.private",
            "module.project_ec2.aws_security_group.ec2_sg",
            "module.project_eks.aws_iam_role_policy_attachment.node_CloudWatchAgentServerPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.project_eks.aws_iam_policy.eks_cluster_role_cloudwatch_policy",
            "module.project_eks.aws_security_group.eks-cluster",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_vpc.this",
            "module.project_eks.aws_eks_node_group.node",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSCloudwatchPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.project_eks.data.aws_iam_policy_document.eks_node_assume_role_policy",
            "module.vpc.aws_route_table.public",
            "module.project_eks.aws_iam_policy.eks_node_instance_policy",
            "module.project_eks.aws_iam_role_policy_attachment.node_harmony_policy_attachment",
            "module.project_eks.data.aws_iam_policy_document.eks_assume_role_policy",
            "module.vpc.aws_route_table_association.public",
            "data.aws_eks_cluster.cluster",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "data.aws_eks_cluster_auth.cluster",
            "module.project_eks.aws_iam_role.eks_cluster_role",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_service",
      "name": "grafana-external",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "id": "monitoring/grafana-external",
            "metadata": [
              {
                "annotations": {
                  "service.beta.kubernetes.io/aws-load-balancer-nlb-target-type": "ip",
                  "service.beta.kubernetes.io/aws-load-balancer-type": "nlb"
                },
                "generation": 0,
                "name": "grafana-external",
                "namespace": "monitoring",
                "resource_version": "47404",
                "uid": "da6e8657-48e6-41d5-91f0-c3b44ce3fde3"
              }
            ],
            "spec": [
              {
                "allocate_load_balancer_node_ports": true,
                "cluster_ip": "172.20.109.73",
                "cluster_ips": [
                  "172.20.109.73"
                ],
                "external_traffic_policy": "Cluster",
                "health_check_node_port": 0,
                "internal_traffic_policy": "Cluster",
                "ip_families": [
                  "IPv4"
                ],
                "ip_family_policy": "SingleStack",
                "port": [
                  {
                    "node_port": 30031,
                    "port": 80,
                    "protocol": "TCP",
                    "target_port": "3000"
                  }
                ],
                "publish_not_ready_addresses": false,
                "selector": {
                  "app.kubernetes.io/name": "grafana"
                },
                "session_affinity": "None",
                "type": "LoadBalancer"
              }
            ],
            "status": [
              {
                "load_balancer": [
                  {
                    "ingress": [
                      {
                        "hostname": "ada6e865748e641d591f0c3b44ce3fde-b24da9193ad80a1c.elb.us-east-2.amazonaws.com"
                      }
                    ]
                  }
                ]
              }
            ],
            "wait_for_load_balancer": true
          },
          "dependencies": [
            "module.project_eks.aws_iam_policy.eks_cluster_role_cloudwatch_policy",
            "module.project_eks.aws_iam_policy.eks_node_instance_policy",
            "module.project_eks.aws_iam_role_policy_attachment.node_CloudWatchAgentServerPolicy",
            "module.vpc.aws_route_table.private",
            "module.project_eks.aws_iam_role.eks_node_cluster_role",
            "module.project_eks.data.aws_iam_policy_document.eks_node_assume_role_policy",
            "module.vpc.aws_internet_gateway.this",
            "data.aws_caller_identity.current",
            "data.aws_eks_cluster_auth.cluster",
            "module.project_eks.aws_iam_role_policy_attachment.node_harmony_policy_attachment",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_vpc.this",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEC2ContainerRegistryReadOnly",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKSWorkerNodePolicy",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_nat_gateway.this",
            "data.aws_eks_cluster.cluster",
            "module.project_eks.aws_eks_cluster.cluster",
            "module.project_eks.aws_eks_node_group.node",
            "module.project_eks.aws_security_group.eks-cluster",
            "module.project_eks.data.aws_iam_policy_document.eks_assume_role_policy",
            "module.vpc.aws_route_table_association.public",
            "module.project_eks.aws_iam_role.eks_cluster_role",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSCloudwatchPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy",
            "module.project_eks.aws_iam_role_policy_attachment.node_AmazonEKS_CNI_Policy",
            "module.vpc.aws_route.public_internet_gateway",
            "module.project_ec2.aws_security_group.ec2_sg",
            "module.project_eks.aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.new_alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:238710184079:loadbalancer/app/a-lb-tf/9a6f222a4b558fff",
            "arn_suffix": "app/a-lb-tf/9a6f222a4b558fff",
            "desync_mitigation_mode": "defensive",
            "dns_name": "a-lb-tf-1413536873.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:238710184079:loadbalancer/app/a-lb-tf/9a6f222a4b558fff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "a-lb-tf",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0b87612c84f99c470"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-028b8ad02f25590c7"
              },
              {
                "subnet_id": "subnet-097a0111b7941a6f9"
              }
            ],
            "subnets": [
              "subnet-028b8ad02f25590c7",
              "subnet-097a0111b7941a6f9"
            ],
            "tags_all": {
              "Name": "udacity",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01abbf27c7a0d93a1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.project_ec2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.new_alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:238710184079:listener/app/a-lb-tf/9a6f222a4b558fff/741b3d0efead7aa5",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:238710184079:targetgroup/a-lb-tg/e193063d05f3047b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:238710184079:listener/app/a-lb-tf/9a6f222a4b558fff/741b3d0efead7aa5",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:238710184079:loadbalancer/app/a-lb-tf/9a6f222a4b558fff",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Name": "udacity",
              "Terraform": "true"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.project_ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.new_alb.aws_lb.alb",
            "module.new_alb.aws_lb_target_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.new_alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:238710184079:targetgroup/a-lb-tg/e193063d05f3047b",
            "arn_suffix": "targetgroup/a-lb-tg/e193063d05f3047b",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:238710184079:targetgroup/a-lb-tg/e193063d05f3047b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "a-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "udacity",
              "Terraform": "true"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.new_alb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:238710184079:targetgroup/a-lb-tg/e193063d05f3047b-20231022063609761200000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:238710184079:targetgroup/a-lb-tg/e193063d05f3047b",
            "target_id": "i-084551cf1167851c3"
          },
          "dependencies": [
            "module.project_ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.new_alb.aws_lb_target_group.alb",
            "module.project_ec2.aws_instance.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-2:238710184079:targetgroup/a-lb-tg/e193063d05f3047b-20231022063609434600000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:238710184079:targetgroup/a-lb-tg/e193063d05f3047b",
            "target_id": "i-0b447fcf771eb7771"
          },
          "dependencies": [
            "module.project_ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.new_alb.aws_lb_target_group.alb",
            "module.project_ec2.aws_instance.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.project_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01555873be4332c86",
            "arn": "arn:aws:ec2:us-east-2:238710184079:instance/i-084551cf1167851c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084551cf1167851c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udacity",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03e9afd86da6568e0",
            "private_dns": "ip-10-100-10-58.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.10.58",
            "public_dns": "ec2-18-220-250-132.us-east-2.compute.amazonaws.com",
            "public_ip": "18.220.250.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-013d4826951630a2d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028b8ad02f25590c7",
            "tags": {
              "Name": "Ubuntu-Web"
            },
            "tags_all": {
              "Name": "Ubuntu-Web",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b87612c84f99c470"
            ]
          },
          "dependencies": [
            "module.project_ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01555873be4332c86",
            "arn": "arn:aws:ec2:us-east-2:238710184079:instance/i-0b447fcf771eb7771",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b447fcf771eb7771",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udacity",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0acd53368d44a0d0b",
            "private_dns": "ip-10-100-10-33.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.10.33",
            "public_dns": "ec2-3-15-142-4.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.142.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dcc1cdfa51e01e3a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028b8ad02f25590c7",
            "tags": {
              "Name": "Ubuntu-Web"
            },
            "tags_all": {
              "Name": "Ubuntu-Web",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b87612c84f99c470"
            ]
          },
          "dependencies": [
            "module.project_ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01555873be4332c86",
            "arn": "arn:aws:ec2:us-east-2:238710184079:instance/i-067c2154dba6cfc6a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067c2154dba6cfc6a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "udacity",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e81b8bd92968ac3a",
            "private_dns": "ip-10-100-10-229.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.100.10.229",
            "public_dns": "ec2-3-147-103-38.us-east-2.compute.amazonaws.com",
            "public_ip": "3.147.103.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-010254142e6a33380",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-028b8ad02f25590c7",
            "tags": {
              "Name": "Ubuntu-Web"
            },
            "tags_all": {
              "Name": "Ubuntu-Web",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b87612c84f99c470"
            ]
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.project_ec2.aws_security_group.ec2_sg"
          ]
        }
      ]
    },
    {
      "module": "module.project_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:security-group/sg-0b87612c84f99c470",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b87612c84f99c470",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "monitoring",
                "from_port": 9100,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9100
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh port",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "web port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2_sg",
            "name_prefix": "",
            "owner_id": "238710184079",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2_sg"
            },
            "tags_all": {
              "Name": "ec2_sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:security-group/sg-011ddfdfaa29ea12a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-011ddfdfaa29ea12a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "SG-eks-cluster",
            "name_prefix": "",
            "owner_id": "238710184079",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "udacity",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_rds_p",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:security-group/sg-08e4d0b7e4565e12c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-08e4d0b7e4565e12c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "udacity-db-sg",
            "name_prefix": "",
            "owner_id": "238710184079",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Name": "udacity",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.project_rds_s",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:security-group/sg-0f4f775a9186c352b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "id": "sg-0f4f775a9186c352b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "udacity-db-sg",
            "name_prefix": "",
            "owner_id": "238710184079",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0f8ac14deb54a3",
            "association_id": "eipassoc-095be3bc0d7d255d4",
            "domain": "vpc",
            "id": "eipalloc-00e0f8ac14deb54a3",
            "network_border_group": "us-east-2",
            "network_interface": "eni-05499a006c3110386",
            "private_dns": "ip-10-100-10-73.us-east-2.compute.internal",
            "private_ip": "10.100.10.73",
            "public_dns": "ec2-18-221-119-7.us-east-2.compute.amazonaws.com",
            "public_ip": "18.221.119.7",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "udacity-project-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:internet-gateway/igw-0775df934a02e85af",
            "id": "igw-0775df934a02e85af",
            "owner_id": "238710184079",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project",
              "Terraform": "true"
            },
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00e0f8ac14deb54a3",
            "association_id": "eipassoc-095be3bc0d7d255d4",
            "connectivity_type": "public",
            "id": "nat-05cc2dd2a35f80da7",
            "network_interface_id": "eni-05499a006c3110386",
            "private_ip": "10.100.10.73",
            "public_ip": "18.221.119.7",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-028b8ad02f25590c7",
            "tags": {
              "Name": "udacity-project-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-051f7ceabefbb6d521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05cc2dd2a35f80da7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-051f7ceabefbb6d52",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0389803302e72cba21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05cc2dd2a35f80da7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0389803302e72cba2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0775df934a02e85af",
            "id": "r-rtb-0e8bbf373ff1a7d0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8bbf373ff1a7d0b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0775df934a02e85af",
            "id": "r-rtb-0e8bbf373ff1a7d0b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e8bbf373ff1a7d0b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:route-table/rtb-051f7ceabefbb6d52",
            "id": "rtb-051f7ceabefbb6d52",
            "owner_id": "238710184079",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05cc2dd2a35f80da7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-private-us-east-2a"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2a",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:route-table/rtb-0389803302e72cba2",
            "id": "rtb-0389803302e72cba2",
            "owner_id": "238710184079",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05cc2dd2a35f80da7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-private-us-east-2b"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2b",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:route-table/rtb-0e8bbf373ff1a7d0b",
            "id": "rtb-0e8bbf373ff1a7d0b",
            "owner_id": "238710184079",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0775df934a02e85af",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-public"
            },
            "tags_all": {
              "Name": "udacity-project-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0889ba89ba2bc2ebd",
            "route_table_id": "rtb-051f7ceabefbb6d52",
            "subnet_id": "subnet-0d43e288a3bb7599c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ae080a4f9bccc017",
            "route_table_id": "rtb-0389803302e72cba2",
            "subnet_id": "subnet-01f6585fce2199d7e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bfc3f04ffe4d7c6e",
            "route_table_id": "rtb-0e8bbf373ff1a7d0b",
            "subnet_id": "subnet-028b8ad02f25590c7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000f570c14b202612",
            "route_table_id": "rtb-0e8bbf373ff1a7d0b",
            "subnet_id": "subnet-097a0111b7941a6f9"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_route_table.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:subnet/subnet-0d43e288a3bb7599c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d43e288a3bb7599c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:subnet/subnet-01f6585fce2199d7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f6585fce2199d7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-east-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:subnet/subnet-028b8ad02f25590c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028b8ad02f25590c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2a",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:subnet/subnet-097a0111b7941a6f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097a0111b7941a6f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-east-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-east-2b",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-01abbf27c7a0d93a1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:238710184079:vpc/vpc-01abbf27c7a0d93a1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-00728a4fe282b1439",
            "default_route_table_id": "rtb-048e3546c84a31292",
            "default_security_group_id": "sg-03716128ca2fa831d",
            "dhcp_options_id": "dopt-087384a44556236d0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01abbf27c7a0d93a1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048e3546c84a31292",
            "owner_id": "238710184079",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project",
              "Terraform": "true"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0407e35d0e88e002c",
            "association_id": "eipassoc-01fbcd445aa30d053",
            "domain": "vpc",
            "id": "eipalloc-0407e35d0e88e002c",
            "network_border_group": "us-west-1",
            "network_interface": "eni-0ba6895eb6e69522e",
            "private_dns": "ip-10-100-10-41.us-west-1.compute.internal",
            "private_ip": "10.100.10.41",
            "public_dns": "ec2-54-67-83-128.us-west-1.compute.amazonaws.com",
            "public_ip": "54.67.83.128",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "udacity-project-us-west-1b"
            },
            "tags_all": {
              "Name": "udacity-project-us-west-1b"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:internet-gateway/igw-05a23af93a5be732a",
            "id": "igw-05a23af93a5be732a",
            "owner_id": "238710184079",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project"
            },
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0407e35d0e88e002c",
            "association_id": "eipassoc-01fbcd445aa30d053",
            "connectivity_type": "public",
            "id": "nat-0f960033c38e91665",
            "network_interface_id": "eni-0ba6895eb6e69522e",
            "private_ip": "10.100.10.41",
            "public_ip": "54.67.83.128",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dadbf6a13ff16963",
            "tags": {
              "Name": "udacity-project-us-west-1b"
            },
            "tags_all": {
              "Name": "udacity-project-us-west-1b"
            }
          },
          "dependencies": [
            "module.vpc_west.aws_eip.nat",
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cbbe39ccafb31de71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f960033c38e91665",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cbbe39ccafb31de7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_eip.nat",
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_nat_gateway.this",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d955a65c06742a691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f960033c38e91665",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d955a65c06742a69",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_eip.nat",
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_nat_gateway.this",
            "module.vpc_west.aws_route_table.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a23af93a5be732a",
            "id": "r-rtb-05942c8c9b4a839891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05942c8c9b4a83989",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05a23af93a5be732a",
            "id": "r-rtb-05942c8c9b4a839891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05942c8c9b4a83989",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_internet_gateway.this",
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:route-table/rtb-0cbbe39ccafb31de7",
            "id": "rtb-0cbbe39ccafb31de7",
            "owner_id": "238710184079",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f960033c38e91665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-private-us-west-1b"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-west-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:route-table/rtb-0d955a65c06742a69",
            "id": "rtb-0d955a65c06742a69",
            "owner_id": "238710184079",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f960033c38e91665",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-private-us-west-1c"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-west-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:route-table/rtb-05942c8c9b4a83989",
            "id": "rtb-05942c8c9b4a83989",
            "owner_id": "238710184079",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05a23af93a5be732a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "udacity-project-public"
            },
            "tags_all": {
              "Name": "udacity-project-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097ef95dcc7616bc4",
            "route_table_id": "rtb-0cbbe39ccafb31de7",
            "subnet_id": "subnet-075e310bd61161c51"
          },
          "dependencies": [
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.private",
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d334e3739f2d4063",
            "route_table_id": "rtb-0d955a65c06742a69",
            "subnet_id": "subnet-0289e7a70ac9d6b44"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this",
            "module.vpc_west.aws_route_table.private",
            "module.vpc_west.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033757cfc41a88619",
            "route_table_id": "rtb-05942c8c9b4a83989",
            "subnet_id": "subnet-0dadbf6a13ff16963"
          },
          "dependencies": [
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed66f819416bff1d",
            "route_table_id": "rtb-05942c8c9b4a83989",
            "subnet_id": "subnet-0cdc9b0f6f6ec0663"
          },
          "dependencies": [
            "module.vpc_west.aws_route_table.public",
            "module.vpc_west.aws_subnet.public",
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:subnet/subnet-075e310bd61161c51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075e310bd61161c51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-west-1b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:subnet/subnet-0289e7a70ac9d6b44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.100.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0289e7a70ac9d6b44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-private-us-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-private-us-west-1c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:subnet/subnet-0dadbf6a13ff16963",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.100.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dadbf6a13ff16963",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-west-1b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:subnet/subnet-0cdc9b0f6f6ec0663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.100.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cdc9b0f6f6ec0663",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "238710184079",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-project-public-us-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "udacity-project-public-us-west-1c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-027539fbfbde77248"
          },
          "dependencies": [
            "module.vpc_west.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_west",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:238710184079:vpc/vpc-027539fbfbde77248",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-043f83144d874c91a",
            "default_route_table_id": "rtb-08464ab96ba13fb7d",
            "default_security_group_id": "sg-0f8b2e007fa65956c",
            "dhcp_options_id": "dopt-0263bd7d84600718c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027539fbfbde77248",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08464ab96ba13fb7d",
            "owner_id": "238710184079",
            "tags": {
              "Name": "udacity-project"
            },
            "tags_all": {
              "Name": "udacity-project"
            }
          }
        }
      ]
    }
  ]
}